--- a/templates/ftth/home.html
+++ b/templates/ftth/home.html
@@ -16,7 +16,18 @@
             <div class="col-lg-12 mb-4 pb-2">
               <div class="form-group">
                 <label for="loan_repayment" class="form-label">Where do you live</label>
-                <input type="text" class="form-control shadow-none" id="loan_repayment" placeholder="E.g Wuye, Abuja">
+                <select class="form-select form-control shadow-none" id="loan_locate" aria-label="Default select example" name="location" required>
+                  <option>Choose your location</option>
+                  {% for coverage in coverage %}
+                  <option value="{{coverage.id}}">{{coverage.coverage_name}}</option>
+                  {% endfor %}
+                </select>
+              </div>
+            </div>
+            <div class="col-lg-12 mb-4 pb-2">
+              <div class="form-group">
+                <label for="loan_email_address" class="form-label">Your Full Name</label>
+                <input type="text" class="form-control shadow-none" id="client_name" placeholder="E.g John Doe" required>
               </div>
             </div>
             <div class="col-lg-12 mb-4 pb-2">
@@ -25,8 +36,16 @@
                 <input type="email" class="form-control shadow-none" id="loan_email_address">
               </div>
             </div>
+            <div class="col-lg-12 mb-4 pb-2">
+              <div class="form-group">
+                <label for="loan_email_address" class="form-label">Your Telephone number</label>
+                <input type="number" class="form-control shadow-none" id="client_phone" required>
+              </div>
+            </div>
             <div class="col-lg-12">
-              <button type="submit" class="btn btn-primary w-100">Check</button>
+              <button type="button" id="checkin" class="btn btn-primary w-100">
+                Check
+              </button>
             </div>
           </div>
         </form>
@@ -43,7 +62,7 @@
           {% for home in homes %}
           <h1 class="mb-4 text-center text-white">{{home.title}}</h1>
           <p class="mb-4 text-white text-center">{{home.content}}</p>
-          <h2 class="text-white">Starting <br/>from<br/> N19,888 / per month</h2>
+          <h2 class="text-white">Starting <br/>from<br/> N13,500 / per month</h2>
           <a type="button" class="btn btn-primary" href="#" data-bs-toggle="modal" data-bs-target="#applyLoan">Check Availability<span style="font-size: 14px;" class="ms-2 fas fa-arrow-right"></span></a>
         </div>
       </div>
@@ -158,7 +177,7 @@
       <div class="col-lg-6 mt-5 mt-lg-0">
 				<div class="section-title ps-0 ps-lg-5">
 					<p class="text-primary text-uppercase fw-bold mb-3">How it works</p>
-					<h2 class="h1">L3Fiber in three easy steps</h2>
+					<h2 class="h1">L3Fiber in Four easy steps</h2>
 					<div class="content">
 					</div>
 				</div>
@@ -249,8 +268,8 @@
     <div class="row justify-content-center">
       <div class="col-lg-12 mb-4">
         <div class="section-title text-center">
-          <p class="text-primary text-uppercase fw-bold mb-3">Pricing</p>
-          <h1>Choose the right plan for your need</h1>
+          <p class="text-primary text-uppercase fw-bold mb-3">Packages</p>
+          <h1>Choose the right plan for your home</h1>
         </div>
       </div>
       <!-- column  -->
@@ -727,6 +746,15 @@
                 Plot 196B Jide Oki Street,
                 <br> Off Ligali Ayorinde Street,
                 <br> Victoria Island, Lagos 
+              </div>
+            </div>
+            <div class="block mx-0 mx-lg-3 mt-4">
+              <h4 class="h5">River park Office</h4>
+              <div class="content">
+                Block B, SHOP 4,
+                <br> Jim Ovia road,
+                <br> River Park Estate,
+                <br> Abuja 
               </div>
             </div>
           </div>
