modified the ftth.html and home.html

--- a/templates/ftth/home.html
+++ b/templates/ftth/home.html
@@ -293,7 +293,7 @@
                   <ul class="list-inline pl-3 font-14 font-weight-medium text-dark">
                     <li class="py-2"><i class="icon-check text-info mr-2"></i> <span>{{price.duration}}</span></li>
                     <li class="py-2"><i class="icon-check text-info mr-2"></i> <span>{{price.quantity}}</span></li>
-                    <li class="py-2"><i class="icon-check text-info mr-2"></i> <span>{{price.speed}}</span></li>
+                    <li class="py-2"><i class="icon-check text-info mr-2"></i> <span><strong>{{price.speed}}</strong></span></li>
                   </ul>
                 </div>
               </div>
