--- a/static/ftth/css/style.css
+++ b/static/ftth/css/style.css
@@ -47,7 +47,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   :root {
-    scroll-behavior: smooth;
+    scroll-behavior: smooth; 
   }
 }
 
@@ -163,7 +163,7 @@ dl {
   margin-bottom: 1rem;
 }
 
-ol ol,
+ol ol pl,
 ul ul,
 ol ul,
 ul ol {
