--- a/templates/ftth/home.html
+++ b/templates/ftth/home.html
@@ -62,7 +62,7 @@
           {% for home in homes %}
           <h1 class="mb-4 text-center text-white">{{home.title}}</h1>
           <p class="mb-4 text-white text-center">{{home.content}}</p>
-          <h2 class="text-white">Starting <br/>from<br/> N13,500 / per month</h2>
+          {% comment %} <h2 class="text-white">Starting <br/>from<br/> N13,500 / per month</h2> {% endcomment %}
           <a type="button" class="btn btn-primary" href="#" data-bs-toggle="modal" data-bs-target="#applyLoan">Check Availability<span style="font-size: 14px;" class="ms-2 fas fa-arrow-right"></span></a>
         </div>
       </div>
@@ -176,8 +176,8 @@
 		<div class="row align-items-center">
       <div class="col-lg-6 mt-5 mt-lg-0">
 				<div class="section-title ps-0 ps-lg-5">
-					<p class="text-primary text-uppercase fw-bold mb-3">How it works</p>
-					<h2 class="h1">L3Fiber in Four easy steps</h2>
+					<p class="text-primary fw-bold mb-3">How It Works</p>
+					<h2 class="h1">L3Fiber in 4 easy steps</h2>
 					<div class="content">
 					</div>
 				</div>
@@ -268,7 +268,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-12 mb-4">
         <div class="section-title text-center">
-          <p class="text-primary text-uppercase fw-bold mb-3">Packages</p>
+          <p class="text-primary fw-bold mb-3">Packages</p>
           <h1>Choose the right plan for your home</h1>
         </div>
       </div>
@@ -402,7 +402,7 @@
     <div class="row align-items-center justify-content-between">
       <div class="col-lg-12 text-center">
         <div class="section-title">
-          <p class="text-primary text-uppercase fw-bold mb-3">Why choose us</p>
+          <p class="text-primary fw-bold mb-3">Why Choose Us</p>
           <h1>What makes us different from others?</h1>
           <div class="content mb-0 mtnt -4">
       
@@ -561,7 +561,7 @@
     <div class="row justify-content-center">
       <div class="col-12">
         <div class="section-title text-center mb-5 pb-2">
-          <p class="text-primary text-uppercase fw-bold mb-3">Questions You Have</p>
+          <p class="text-primary fw-bold mb-3">Questions You Have</p>
           <h1>Frequently asked questions</h1>
         </div>
       </div>
@@ -749,7 +749,7 @@
               </div>
             </div>
             <div class="block mx-0 mx-lg-3 mt-4">
-              <h4 class="h5">River park Office</h4>
+              <h4 class="h5">River Park Office</h4>
               <div class="content">
                 Block B, SHOP 4,
                 <br> Jim Ovia road,
