--- a/templates/layout/ftth.html
+++ b/templates/layout/ftth.html
@@ -55,7 +55,7 @@
 					</li>
 				</ul>
 				<!-- <a href="#!" class="btn btn-outline-primary">Log In</a> -->
-				<a href="plan/1" class="btn btn-primary ms-2 ms-lg-3">Get Started</a>
+				<a href="https://layer3.ng/self-service-portal" target="_blank" class="btn btn-primary ms-2 ms-lg-3">Self Service Portal</a>
 			</div>
 		</div>
 	</nav>
@@ -76,7 +76,7 @@
 						</li>
 						<li class="mb-2"><a href="#">Layer3Cloud</a>
 						</li>
-						<li class="mb-2"><a href="plan/1">Get Started</a>
+						<li class="mb-2"><a target="_blank" href="https://layer3.ng/self-service-portal">Self Service Portal</a>
 						</li>
 					</ul>
 				</div>
