--- a/templates/ftth/home.html
+++ b/templates/ftth/home.html
@@ -397,7 +397,7 @@
   </div>
 </section>
 
-<section id="speed-background" class="bg-ftth section" style="padding-top: 20px !important;">
+<section id="speed-background" class="bg-ftth section">
   <div class="container">
     <div class="row align-items-center justify-content-between">
       <div class="col-lg-12 text-center">
@@ -465,8 +465,8 @@
   </div>
 </section>
 
-<section class="section testimonials overflow-hidden" style="background-image: url({% static 'ftth/images/banner/happy-woman-laptop.jpg'%});background-repeat: no-repeat; background-size: cover;">
-  <div class="container" style="margin-bottom: 150px; margin-top: 20px;">
+<section class="section testimonials overflow-hidden custom-padding" style="background-image: url({% static 'ftth/images/banner/happy-woman-laptop.jpg'%});background-repeat: no-repeat; background-size: cover;">
+  <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-6 text-white" style="margin-top: 20px;">
         <div class="section-title text-center">
