Worked on the mobile responsiveness.

--- a/static/ftth/css/style.css
+++ b/static/ftth/css/style.css
@@ -9614,9 +9614,11 @@ blockquote::before {
   }
 }
 @media (max-width: 600px) {
-  .custom-padding {
-    margin-top: 800px !important; 
-  }
+  /* .custom-padding {
+    margin-top: 800px !important;
+    background-color: #e4230d !important;
+  } */
+
 }
 
 .homepage_tab .payment_info_tab .active {
@@ -10213,7 +10215,7 @@ textarea.form-control {
 
 #speed-background{
   width: 100%;
-    height: 100%;
+    
     box-sizing: border-box;
 }
 
