--- a/templates/ftth/home.html
+++ b/templates/ftth/home.html
@@ -7,7 +7,7 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header border-bottom-0">
-        <h4 class="modal-title" id="exampleModalLabel">Check Our Service Availability</h4>
+        <h4 class="modal-title" id="exampleModalLabel">Check Our Service availability</h4>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -19,7 +19,7 @@
                 <select class="form-select form-control shadow-none" id="loan_locate" aria-label="Default select example" name="location" required>
                   <option>Choose your location</option>
                   {% for coverage in coverage %}
-                  <option value="{{coverage_id}}">{{coverage.coverage_name}}</option>
+                  <option value="{{coverage.id}}">{{coverage.coverage_name}}</option>
                   {% endfor %}
                 </select>
               </div>
@@ -33,7 +33,7 @@
             <div class="col-lg-12 mb-4 pb-2">
               <div class="form-group">
                 <label for="loan_email_address" class="form-label">Your email address</label>
-                <input type="email" class="form-control shadow-none" id="loan_email_address">
+                <input type="email" class="form-control shadow-none" id="client_email" placeholder="E.g johndoe@gmail.com" required>
               </div>
             </div>
             <div class="col-lg-12 mb-4 pb-2">
@@ -49,6 +49,20 @@
             </div>
           </div>
         </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal applyLoanModal fade" id="modalStats" tabindex="-1" aria-labelledby="applyLoanLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header border-bottom-0 text-center">
+        <h3 class="modal-title" id="exampleModalLabel"></h3>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-center" id="statementModal">
+        
       </div>
     </div>
   </div>
