--- a/templates/ftth/home.html
+++ b/templates/ftth/home.html
@@ -68,7 +68,7 @@
   </div>
 </div>
 
-<section class="banner position-relative overflow-hidden" style="background-image: url({% static 'ftth/images/banner/happyfamily.jpg'%});background-repeat: no-repeat; background-size: cover;">
+<section class="banner position-relative overflow-hidden" style="background-image: url({% static 'ftth/images/banner/happyfamily.png'%});background-repeat: no-repeat; background-size: cover;">
   <div class="container">
     <div class="row text-center">
       <div class="col-md-8 offset-md-2 mb-5 mb-lg-0 text-center">
@@ -492,7 +492,7 @@
     <div class="row position-relative">
       {% for x in feedback %}
         <div class="col-lg-4 col-md-6 pt-1">
-          <div class="shadow rounded bg-white p-4 mt-4">
+          <div class="shadow rounded bg-white p-4 mt-4" style="height:242.59px !important">
             <div class="d-block d-sm-flex align-items-center mb-3">
               <div class="mt-3 mt-sm-0 ms-0 ms-sm-3">
                 <h4 class="h5 mb-1">{{x.name}}, {{x.location}}</h4>
