--- a/templates/ftth/home.html
+++ b/templates/ftth/home.html
@@ -479,7 +479,7 @@
   </div>
 </section>
 
-<section class="section testimonials overflow-hidden custom-padding" style="background-image: url({% static 'ftth/images/banner/happy-woman-laptop.jpg'%});background-repeat: no-repeat; background-size: cover;">
+<section class="section testimonials overflow-hidden custom-padding" style="background-image: url({% static 'ftth/images/banner/happy-woman-laptop.png'%});background-repeat: no-repeat; background-size: cover;">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-6 text-white" style="margin-top: 20px;">
