changed meta description and added favicon

--- a/templates/layout/ftth.html
+++ b/templates/layout/ftth.html
@@ -7,10 +7,10 @@
 	<meta charset="utf-8">
 	<title>FTTH - Layer3Fiber</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
-	<meta name="description" content="This is meta description">
-	<meta name="author" content="Themefisher">
-	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-	<link rel="icon" href="images/favicon.png" type="image/x-icon">
+	<meta name="description" content="Discover the future of connectivity with L3Fiber – the premium fiber optic solution delivering high-speed, reliable and secure internet for homes and businesses. Upgrade to L3Fiber today!">
+	<meta name="author" content="Layer3">
+	<link rel="shortcut icon" href="{% static 'ftth/images/favicon.png' %}" type="image/x-icon">
+	<link rel="icon" href="{% static 'ftth/images/favicon.png' %}" type="image/x-icon">
 
 	<!-- # Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
