--- a/templates/ftth/home.html
+++ b/templates/ftth/home.html
@@ -289,21 +289,21 @@
       <!-- column  -->
       {% for price in pricing %}
         <div class="col-md-4">
-          <div class="card card-shadow border-0 mb-4 shadow-lg">
+          <div class="card card-shadow border-0 mb-4 shadow-lg text-center">
             <div class="card-body p-4">
-              <div class="d-flex align-items-center">
+              <div class="text-center">
                 <h5 class="font-weight-medium mb-0">{{price.title}}</h5>
                 <div class="ml-auto"><span class="badge badge-danger font-weight-normal p-2"></span></div>
               </div>
               <div class="row">
-                <div class="col-lg-5 text-center">
-                  <div class="price-box my-3">
+                <div class="col-lg-12 text-center">
+                  <div class="price-box">
                     <sup>&#8358;</sup><span class="text-dark display-6">{{price.price}} </span>
                     <h6 class="font-weight-light">MONTHLY</h6>
                     <a class="btn btn-custom btn-info-gradiant font-14 border-0 text-white p-3 btn-block mt-3" href="{% url 'plan' id=price.id %}">CHOOSE PLAN </a>
                   </div>
                 </div>
-                <div class="col-lg-7 align-self-center">
+                <div class="col-lg-12 text-center">
                   <ul class="list-inline pl-3 font-14 font-weight-medium text-dark">
                     <li class="py-2"><i class="icon-check text-info mr-2"></i> <span>{{price.duration}}</span></li>
                     <li class="py-2"><i class="icon-check text-info mr-2"></i> <span>{{price.quantity}}</span></li>
