--- a/templates/ftth/home.html
+++ b/templates/ftth/home.html
@@ -11,7 +11,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form action="#!" method="post">
+        <form action="#!" method="post" enctype="multipart/form-data">
           <div class="row">
             <div class="col-lg-12 mb-4 pb-2">
               <div class="form-group">
